feat: updated .gitignore

--- a/notebooks/1.1 Save data to minio.ipynb
+++ b/notebooks/1.1 Save data to minio.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,44 +74,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Minio(\n",
-    "    endpoint='localhost:9001',\n",
-    "    access_key=,\n",
-    "    secret_key=None,\n",
-    "    session_token=None,\n",
-    "    secure=True,\n",
-    "    region=None,\n",
-    "    http_client=None,\n",
-    "    credentials=None,\n",
-    ")"
+    "env_sh = open(\n",
+    "    p_join(str((Path(os.getcwd()).parent)), 'env.sh'), \n",
+    "    mode='r', \n",
+    "    encoding='utf-8'\n",
+    ").read().split('\\n')\n",
+    "\n",
+    "MINIO_ACCESS_KEY = [\n",
+    "    row.split('=')[-1].replace('\"', '').replace(\"'\", \"\") for row in env_sh if 'MINIO_ACCESS_KEY' in row\n",
+    "][0]\n",
+    "MINIO_SECRET_KEY = [\n",
+    "    row.split('=')[-1].replace('\"', '').replace(\"'\", \"\") for row in env_sh if 'MINIO_SECRET_KEY' in row\n",
+    "][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minio.api.Minio at 0x7fc5eb3a0970>"
+       "<minio.api.Minio at 0x7facec5e5e50>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# creating Minio client\n",
+    "from minio import Minio\n",
+    "\n",
     "minio_client = Minio(\n",
     "    endpoint=\"172.17.0.2:9000\",\n",
-    "    access_key=\"joitandr\",\n",
-    "    secret_key=\"0w9a8c7r6a5f4t\",\n",
+    "    access_key=MINIO_ACCESS_KEY,\n",
+    "    secret_key=MINIO_SECRET_KEY,\n",
     "    secure=False,\n",
     ")\n",
     "minio_client"
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +132,7 @@
        "[Bucket('ufc-raw-data')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
