--- a/notebooks/1.1 Save data to minio.ipynb
+++ b/notebooks/1.1 Save data to minio.ipynb
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +55,8 @@
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path(os.getcwd()).parent))\n",
     "import requests\n",
+    "import json\n",
+    "import pickle\n",
     "from tqdm import tqdm\n",
     "try:\n",
     "    from fabulous import color as fb_color\n",
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minio.api.Minio at 0x7facec5e5e50>"
+       "<minio.api.Minio at 0x7f59cce4ce80>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +143,7 @@
        "[Bucket('ufc-raw-data')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,17 +164,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp_data = {'some_key': ['some', 'list', 'of', 'values']}\n",
+    "json.dump(\n",
+    "    obj=tmp_data, fp=open('/home/aiandrejcev/tmp.json', mode='w', encoding='utf-8'), \n",
+    "    ensure_ascii=False, indent=2\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minio.helpers.ObjectWriteResult at 0x7f598227bfa0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minio_client.fput_object(\n",
+    "    bucket_name='ufc-raw-data',\n",
+    "    object_name='tmp_try.json',\n",
+    "    file_path='/home/aiandrejcev/tmp.json',\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
