--- a/notebooks/1.0 Data Loading.ipynb
+++ b/notebooks/1.0 Data Loading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:41.962621Z",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:06:04.786880Z",
@@ -70,6 +70,8 @@
    },
    "outputs": [],
    "source": [
+    "from src.minio_utils import minio_container_ipaddr\n",
+    "\n",
     "from src.parse_utils import get_events_list, get_events_info, get_fighters_info, get_one_fight_stats\n",
     "from src.processing import eventslist2df\n",
     "from src.pipelines.parse_all_fights import parse_all_fights"
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:46.407285Z",
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:48.915396Z",
@@ -148,27 +150,27 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "638\n"
+      "678\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'event_url': 'http://www.ufcstats.com/event-details/35080a7f406f9ab3',\n",
-       "  'event_name': 'UFC Fight Night: Yan vs. Dvalishvili',\n",
-       "  'date': 'March 11, 2023',\n",
+       "[{'event_url': 'http://www.ufcstats.com/event-details/dab0e6cb8c932162',\n",
+       "  'event_name': 'UFC 298: Volkanovski vs. Topuria',\n",
+       "  'date': 'February 17, 2024',\n",
+       "  'location': 'Anaheim, California, USA'},\n",
+       " {'event_url': 'http://www.ufcstats.com/event-details/eaea0fc7b76525a8',\n",
+       "  'event_name': 'UFC Fight Night: Hermansson vs. Pyfer',\n",
+       "  'date': 'February 10, 2024',\n",
        "  'location': 'Las Vegas, Nevada, USA'},\n",
-       " {'event_url': 'http://www.ufcstats.com/event-details/1ccff7f0cfdf85eb',\n",
-       "  'event_name': 'UFC 285: Jones vs. Gane',\n",
-       "  'date': 'March 04, 2023',\n",
-       "  'location': 'Las Vegas, Nevada, USA'},\n",
-       " {'event_url': 'http://www.ufcstats.com/event-details/806975e1b4f47b27',\n",
-       "  'event_name': 'UFC Fight Night: Muniz vs. Allen',\n",
-       "  'date': 'February 25, 2023',\n",
+       " {'event_url': 'http://www.ufcstats.com/event-details/cce79e827569f26e',\n",
+       "  'event_name': 'UFC Fight Night: Dolidze vs. Imavov',\n",
+       "  'date': 'February 03, 2024',\n",
        "  'location': 'Las Vegas, Nevada, USA'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:48.977273Z",
@@ -220,38 +222,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/35080a7f...</td>\n",
-       "      <td>UFC Fight Night: Yan vs. Dvalishvili</td>\n",
-       "      <td>March 11, 2023</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
+       "      <td>http://www.ufcstats.com/event-details/dab0e6cb...</td>\n",
+       "      <td>UFC 298: Volkanovski vs. Topuria</td>\n",
+       "      <td>February 17, 2024</td>\n",
+       "      <td>Anaheim, California, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/1ccff7f0...</td>\n",
-       "      <td>UFC 285: Jones vs. Gane</td>\n",
-       "      <td>March 04, 2023</td>\n",
+       "      <td>http://www.ufcstats.com/event-details/eaea0fc7...</td>\n",
+       "      <td>UFC Fight Night: Hermansson vs. Pyfer</td>\n",
+       "      <td>February 10, 2024</td>\n",
        "      <td>Las Vegas, Nevada, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/806975e1...</td>\n",
-       "      <td>UFC Fight Night: Muniz vs. Allen</td>\n",
-       "      <td>February 25, 2023</td>\n",
+       "      <td>http://www.ufcstats.com/event-details/cce79e82...</td>\n",
+       "      <td>UFC Fight Night: Dolidze vs. Imavov</td>\n",
+       "      <td>February 03, 2024</td>\n",
        "      <td>Las Vegas, Nevada, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/f21a3d68...</td>\n",
-       "      <td>UFC Fight Night: Andrade vs. Blanchfield</td>\n",
-       "      <td>February 18, 2023</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
+       "      <td>http://www.ufcstats.com/event-details/bd85ca0b...</td>\n",
+       "      <td>UFC 297: Strickland vs. Du Plessis</td>\n",
+       "      <td>January 20, 2024</td>\n",
+       "      <td>Toronto, Ontario, Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/01dd4cdc...</td>\n",
-       "      <td>UFC 284: Makhachev vs. Volkanovski</td>\n",
-       "      <td>February 11, 2023</td>\n",
-       "      <td>Perth, Western Australia, Australia</td>\n",
+       "      <td>http://www.ufcstats.com/event-details/010986ee...</td>\n",
+       "      <td>UFC Fight Night: Ankalaev vs. Walker 2</td>\n",
+       "      <td>January 13, 2024</td>\n",
+       "      <td>Las Vegas, Nevada, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -261,35 +263,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>633</th>\n",
+       "      <th>673</th>\n",
        "      <td>http://www.ufcstats.com/event-details/1c3f5e85...</td>\n",
        "      <td>UFC 6: Clash of the Titans</td>\n",
        "      <td>July 14, 1995</td>\n",
        "      <td>Casper, Wyoming, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>634</th>\n",
+       "      <th>674</th>\n",
        "      <td>http://www.ufcstats.com/event-details/dedc3bb4...</td>\n",
        "      <td>UFC 5: The Return of the Beast</td>\n",
        "      <td>April 07, 1995</td>\n",
        "      <td>Charlotte, North Carolina, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>635</th>\n",
+       "      <th>675</th>\n",
        "      <td>http://www.ufcstats.com/event-details/b60391da...</td>\n",
        "      <td>UFC 4: Revenge of the Warriors</td>\n",
        "      <td>December 16, 1994</td>\n",
        "      <td>Tulsa, Oklahoma, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>636</th>\n",
+       "      <th>676</th>\n",
        "      <td>http://www.ufcstats.com/event-details/1a49e067...</td>\n",
        "      <td>UFC 3: The American Dream</td>\n",
        "      <td>September 09, 1994</td>\n",
        "      <td>Charlotte, North Carolina, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>637</th>\n",
+       "      <th>677</th>\n",
        "      <td>http://www.ufcstats.com/event-details/a6a9ab5a...</td>\n",
        "      <td>UFC 2: No Way Out</td>\n",
        "      <td>March 11, 1994</td>\n",
@@ -297,53 +299,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>638 rows × 4 columns</p>\n",
+       "<p>678 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             event_url  \\\n",
-       "0    http://www.ufcstats.com/event-details/35080a7f...   \n",
-       "1    http://www.ufcstats.com/event-details/1ccff7f0...   \n",
-       "2    http://www.ufcstats.com/event-details/806975e1...   \n",
-       "3    http://www.ufcstats.com/event-details/f21a3d68...   \n",
-       "4    http://www.ufcstats.com/event-details/01dd4cdc...   \n",
+       "                                             event_url   \n",
+       "0    http://www.ufcstats.com/event-details/dab0e6cb...  \\\n",
+       "1    http://www.ufcstats.com/event-details/eaea0fc7...   \n",
+       "2    http://www.ufcstats.com/event-details/cce79e82...   \n",
+       "3    http://www.ufcstats.com/event-details/bd85ca0b...   \n",
+       "4    http://www.ufcstats.com/event-details/010986ee...   \n",
        "..                                                 ...   \n",
-       "633  http://www.ufcstats.com/event-details/1c3f5e85...   \n",
-       "634  http://www.ufcstats.com/event-details/dedc3bb4...   \n",
-       "635  http://www.ufcstats.com/event-details/b60391da...   \n",
-       "636  http://www.ufcstats.com/event-details/1a49e067...   \n",
-       "637  http://www.ufcstats.com/event-details/a6a9ab5a...   \n",
+       "673  http://www.ufcstats.com/event-details/1c3f5e85...   \n",
+       "674  http://www.ufcstats.com/event-details/dedc3bb4...   \n",
+       "675  http://www.ufcstats.com/event-details/b60391da...   \n",
+       "676  http://www.ufcstats.com/event-details/1a49e067...   \n",
+       "677  http://www.ufcstats.com/event-details/a6a9ab5a...   \n",
        "\n",
-       "                                   event_name                date  \\\n",
-       "0        UFC Fight Night: Yan vs. Dvalishvili      March 11, 2023   \n",
-       "1                     UFC 285: Jones vs. Gane      March 04, 2023   \n",
-       "2            UFC Fight Night: Muniz vs. Allen   February 25, 2023   \n",
-       "3    UFC Fight Night: Andrade vs. Blanchfield   February 18, 2023   \n",
-       "4          UFC 284: Makhachev vs. Volkanovski   February 11, 2023   \n",
-       "..                                        ...                 ...   \n",
-       "633                UFC 6: Clash of the Titans       July 14, 1995   \n",
-       "634            UFC 5: The Return of the Beast      April 07, 1995   \n",
-       "635            UFC 4: Revenge of the Warriors   December 16, 1994   \n",
-       "636                 UFC 3: The American Dream  September 09, 1994   \n",
-       "637                         UFC 2: No Way Out      March 11, 1994   \n",
+       "                                 event_name                date   \n",
+       "0          UFC 298: Volkanovski vs. Topuria   February 17, 2024  \\\n",
+       "1     UFC Fight Night: Hermansson vs. Pyfer   February 10, 2024   \n",
+       "2       UFC Fight Night: Dolidze vs. Imavov   February 03, 2024   \n",
+       "3        UFC 297: Strickland vs. Du Plessis    January 20, 2024   \n",
+       "4    UFC Fight Night: Ankalaev vs. Walker 2    January 13, 2024   \n",
+       "..                                      ...                 ...   \n",
+       "673              UFC 6: Clash of the Titans       July 14, 1995   \n",
+       "674          UFC 5: The Return of the Beast      April 07, 1995   \n",
+       "675          UFC 4: Revenge of the Warriors   December 16, 1994   \n",
+       "676               UFC 3: The American Dream  September 09, 1994   \n",
+       "677                       UFC 2: No Way Out      March 11, 1994   \n",
        "\n",
-       "                                location  \n",
-       "0                 Las Vegas, Nevada, USA  \n",
-       "1                 Las Vegas, Nevada, USA  \n",
-       "2                 Las Vegas, Nevada, USA  \n",
-       "3                 Las Vegas, Nevada, USA  \n",
-       "4    Perth, Western Australia, Australia  \n",
-       "..                                   ...  \n",
-       "633                 Casper, Wyoming, USA  \n",
-       "634       Charlotte, North Carolina, USA  \n",
-       "635                 Tulsa, Oklahoma, USA  \n",
-       "636       Charlotte, North Carolina, USA  \n",
-       "637                Denver, Colorado, USA  \n",
+       "                           location  \n",
+       "0          Anaheim, California, USA  \n",
+       "1            Las Vegas, Nevada, USA  \n",
+       "2            Las Vegas, Nevada, USA  \n",
+       "3          Toronto, Ontario, Canada  \n",
+       "4            Las Vegas, Nevada, USA  \n",
+       "..                              ...  \n",
+       "673            Casper, Wyoming, USA  \n",
+       "674  Charlotte, North Carolina, USA  \n",
+       "675            Tulsa, Oklahoma, USA  \n",
+       "676  Charlotte, North Carolina, USA  \n",
+       "677           Denver, Colorado, USA  \n",
        "\n",
-       "[638 rows x 4 columns]"
+       "[678 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +366,8 @@
     "\n",
     "try:\n",
     "    minio_client = Minio(\n",
-    "        endpoint=\"172.17.0.2:9000\",\n",
+    "        # endpoint=\"172.17.0.2:9000\",\n",
+    "        endpoint=f\"{minio_container_ipaddr()}:9000\",\n",
     "        access_key=MINIO_ACCESS_KEY,\n",
     "        secret_key=MINIO_SECRET_KEY,\n",
     "        secure=False,\n",
@@ -467,7 +470,8 @@
     "\n",
     "# creating Minio client\n",
     "minio_client = Minio(\n",
-    "    endpoint=\"172.17.0.2:9000\",\n",
+    "    # endpoint=\"172.17.0.2:9000\",\n",
+    "    endpoint=f\"{minio_container_ipaddr()}:9000\",\n",
     "    access_key=MINIO_ACCESS_KEY,\n",
     "    secret_key=MINIO_SECRET_KEY,\n",
     "    secure=False,\n",
@@ -508,7 +512,7 @@
   "kernelspec": {
    "display_name": "ufc_venv",
    "language": "python",
-   "name": "ufc_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
