--- a/notebooks/1.1 Transfering data from minio to postgres.ipynb
+++ b/notebooks/1.1 Transfering data from minio to postgres.ipynb
@@ -42,6 +42,8 @@
     "import os\n",
     "from os.path import join as p_join\n",
     "import sys\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "from typing import List, Tuple, Dict, Set, Any, Optional, Callable\n",
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path(os.getcwd()).parent))\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(all_fights_list): 7,281\n"
+      "len(all_fights_list): 7,519\n"
      ]
     }
    ],
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +252,7 @@
        " 'per_round_stats__round3__ground__2': '0 of 0'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,21 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7281it [00:01, 3764.84it/s]\n"
+      "7519it [00:01, 3831.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res_df: 7,281 x 165\n"
+      "res_df: 7,519 x 165\n"
      ]
     },
     {
@@ -1414,7 +1416,7 @@
        "2                                NaN                                NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,14 +1429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7281it [00:01, 3861.58it/s]\n"
+      "7519it [00:01, 3916.56it/s]\n"
      ]
     },
     {
@@ -2571,7 +2573,7 @@
        "2                               None                               None  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2612,7 +2614,7 @@
   "kernelspec": {
    "display_name": "ufc_venv",
    "language": "python",
-   "name": "ufc_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
