working src/pipelines/flows/parse_and_save_to_minio.py version

--- a/notebooks/1.0 Data Loading.ipynb
+++ b/notebooks/1.0 Data Loading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:41.962621Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:45.050964Z",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:06:04.786880Z",
@@ -70,7 +70,10 @@
    },
    "outputs": [],
    "source": [
-    "from src.minio_utils import minio_container_ipaddr\n",
+    "from src.minio_utils import (\n",
+    "    minio_container_ipaddr, \n",
+    "    initialize_minio_client\n",
+    ")\n",
     "\n",
     "from src.parse_utils import get_events_list, get_events_info, get_fighters_info, get_one_fight_stats\n",
     "from src.processing import eventslist2df\n",
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-27T05:04:45.148384Z",
@@ -150,24 +153,24 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "678\n"
+      "681\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'event_url': 'http://www.ufcstats.com/event-details/dab0e6cb8c932162',\n",
-       "  'event_name': 'UFC 298: Volkanovski vs. Topuria',\n",
-       "  'date': 'February 17, 2024',\n",
-       "  'location': 'Anaheim, California, USA'},\n",
-       " {'event_url': 'http://www.ufcstats.com/event-details/eaea0fc7b76525a8',\n",
-       "  'event_name': 'UFC Fight Night: Hermansson vs. Pyfer',\n",
-       "  'date': 'February 10, 2024',\n",
+       "[{'event_url': 'http://www.ufcstats.com/event-details/a9df5ae20a97b090',\n",
+       "  'event_name': \"UFC 299: O'Malley vs. Vera 2\",\n",
+       "  'date': 'March 09, 2024',\n",
+       "  'location': 'Miami, Florida, USA'},\n",
+       " {'event_url': 'http://www.ufcstats.com/event-details/e4a9dbade7c7e1a7',\n",
+       "  'event_name': 'UFC Fight Night: Rozenstruik vs. Gaziev',\n",
+       "  'date': 'March 02, 2024',\n",
        "  'location': 'Las Vegas, Nevada, USA'},\n",
-       " {'event_url': 'http://www.ufcstats.com/event-details/cce79e827569f26e',\n",
-       "  'event_name': 'UFC Fight Night: Dolidze vs. Imavov',\n",
-       "  'date': 'February 03, 2024',\n",
-       "  'location': 'Las Vegas, Nevada, USA'}]"
+       " {'event_url': 'http://www.ufcstats.com/event-details/902ab9197b83d0db',\n",
+       "  'event_name': 'UFC Fight Night: Moreno vs. Royval 2',\n",
+       "  'date': 'February 24, 2024',\n",
+       "  'location': 'Mexico City, Distrito Federal, Mexico'}]"
       ]
      },
      "execution_count": 6,
@@ -222,37 +225,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>http://www.ufcstats.com/event-details/a9df5ae2...</td>\n",
+       "      <td>UFC 299: O'Malley vs. Vera 2</td>\n",
+       "      <td>March 09, 2024</td>\n",
+       "      <td>Miami, Florida, USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.ufcstats.com/event-details/e4a9dbad...</td>\n",
+       "      <td>UFC Fight Night: Rozenstruik vs. Gaziev</td>\n",
+       "      <td>March 02, 2024</td>\n",
+       "      <td>Las Vegas, Nevada, USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.ufcstats.com/event-details/902ab919...</td>\n",
+       "      <td>UFC Fight Night: Moreno vs. Royval 2</td>\n",
+       "      <td>February 24, 2024</td>\n",
+       "      <td>Mexico City, Distrito Federal, Mexico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>http://www.ufcstats.com/event-details/dab0e6cb...</td>\n",
        "      <td>UFC 298: Volkanovski vs. Topuria</td>\n",
        "      <td>February 17, 2024</td>\n",
        "      <td>Anaheim, California, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>http://www.ufcstats.com/event-details/eaea0fc7...</td>\n",
        "      <td>UFC Fight Night: Hermansson vs. Pyfer</td>\n",
        "      <td>February 10, 2024</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/cce79e82...</td>\n",
-       "      <td>UFC Fight Night: Dolidze vs. Imavov</td>\n",
-       "      <td>February 03, 2024</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/bd85ca0b...</td>\n",
-       "      <td>UFC 297: Strickland vs. Du Plessis</td>\n",
-       "      <td>January 20, 2024</td>\n",
-       "      <td>Toronto, Ontario, Canada</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://www.ufcstats.com/event-details/010986ee...</td>\n",
-       "      <td>UFC Fight Night: Ankalaev vs. Walker 2</td>\n",
-       "      <td>January 13, 2024</td>\n",
        "      <td>Las Vegas, Nevada, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -263,35 +266,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>673</th>\n",
+       "      <th>676</th>\n",
        "      <td>http://www.ufcstats.com/event-details/1c3f5e85...</td>\n",
        "      <td>UFC 6: Clash of the Titans</td>\n",
        "      <td>July 14, 1995</td>\n",
        "      <td>Casper, Wyoming, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>674</th>\n",
+       "      <th>677</th>\n",
        "      <td>http://www.ufcstats.com/event-details/dedc3bb4...</td>\n",
        "      <td>UFC 5: The Return of the Beast</td>\n",
        "      <td>April 07, 1995</td>\n",
        "      <td>Charlotte, North Carolina, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>675</th>\n",
+       "      <th>678</th>\n",
        "      <td>http://www.ufcstats.com/event-details/b60391da...</td>\n",
        "      <td>UFC 4: Revenge of the Warriors</td>\n",
        "      <td>December 16, 1994</td>\n",
        "      <td>Tulsa, Oklahoma, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>676</th>\n",
+       "      <th>679</th>\n",
        "      <td>http://www.ufcstats.com/event-details/1a49e067...</td>\n",
        "      <td>UFC 3: The American Dream</td>\n",
        "      <td>September 09, 1994</td>\n",
        "      <td>Charlotte, North Carolina, USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>677</th>\n",
+       "      <th>680</th>\n",
        "      <td>http://www.ufcstats.com/event-details/a6a9ab5a...</td>\n",
        "      <td>UFC 2: No Way Out</td>\n",
        "      <td>March 11, 1994</td>\n",
@@ -299,50 +302,50 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>678 rows × 4 columns</p>\n",
+       "<p>681 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                             event_url   \n",
-       "0    http://www.ufcstats.com/event-details/dab0e6cb...  \\\n",
-       "1    http://www.ufcstats.com/event-details/eaea0fc7...   \n",
-       "2    http://www.ufcstats.com/event-details/cce79e82...   \n",
-       "3    http://www.ufcstats.com/event-details/bd85ca0b...   \n",
-       "4    http://www.ufcstats.com/event-details/010986ee...   \n",
+       "0    http://www.ufcstats.com/event-details/a9df5ae2...  \\\n",
+       "1    http://www.ufcstats.com/event-details/e4a9dbad...   \n",
+       "2    http://www.ufcstats.com/event-details/902ab919...   \n",
+       "3    http://www.ufcstats.com/event-details/dab0e6cb...   \n",
+       "4    http://www.ufcstats.com/event-details/eaea0fc7...   \n",
        "..                                                 ...   \n",
-       "673  http://www.ufcstats.com/event-details/1c3f5e85...   \n",
-       "674  http://www.ufcstats.com/event-details/dedc3bb4...   \n",
-       "675  http://www.ufcstats.com/event-details/b60391da...   \n",
-       "676  http://www.ufcstats.com/event-details/1a49e067...   \n",
-       "677  http://www.ufcstats.com/event-details/a6a9ab5a...   \n",
+       "676  http://www.ufcstats.com/event-details/1c3f5e85...   \n",
+       "677  http://www.ufcstats.com/event-details/dedc3bb4...   \n",
+       "678  http://www.ufcstats.com/event-details/b60391da...   \n",
+       "679  http://www.ufcstats.com/event-details/1a49e067...   \n",
+       "680  http://www.ufcstats.com/event-details/a6a9ab5a...   \n",
        "\n",
-       "                                 event_name                date   \n",
-       "0          UFC 298: Volkanovski vs. Topuria   February 17, 2024  \\\n",
-       "1     UFC Fight Night: Hermansson vs. Pyfer   February 10, 2024   \n",
-       "2       UFC Fight Night: Dolidze vs. Imavov   February 03, 2024   \n",
-       "3        UFC 297: Strickland vs. Du Plessis    January 20, 2024   \n",
-       "4    UFC Fight Night: Ankalaev vs. Walker 2    January 13, 2024   \n",
-       "..                                      ...                 ...   \n",
-       "673              UFC 6: Clash of the Titans       July 14, 1995   \n",
-       "674          UFC 5: The Return of the Beast      April 07, 1995   \n",
-       "675          UFC 4: Revenge of the Warriors   December 16, 1994   \n",
-       "676               UFC 3: The American Dream  September 09, 1994   \n",
-       "677                       UFC 2: No Way Out      March 11, 1994   \n",
+       "                                  event_name                date   \n",
+       "0               UFC 299: O'Malley vs. Vera 2      March 09, 2024  \\\n",
+       "1    UFC Fight Night: Rozenstruik vs. Gaziev      March 02, 2024   \n",
+       "2       UFC Fight Night: Moreno vs. Royval 2   February 24, 2024   \n",
+       "3           UFC 298: Volkanovski vs. Topuria   February 17, 2024   \n",
+       "4      UFC Fight Night: Hermansson vs. Pyfer   February 10, 2024   \n",
+       "..                                       ...                 ...   \n",
+       "676               UFC 6: Clash of the Titans       July 14, 1995   \n",
+       "677           UFC 5: The Return of the Beast      April 07, 1995   \n",
+       "678           UFC 4: Revenge of the Warriors   December 16, 1994   \n",
+       "679                UFC 3: The American Dream  September 09, 1994   \n",
+       "680                        UFC 2: No Way Out      March 11, 1994   \n",
        "\n",
-       "                           location  \n",
-       "0          Anaheim, California, USA  \n",
-       "1            Las Vegas, Nevada, USA  \n",
-       "2            Las Vegas, Nevada, USA  \n",
-       "3          Toronto, Ontario, Canada  \n",
-       "4            Las Vegas, Nevada, USA  \n",
-       "..                              ...  \n",
-       "673            Casper, Wyoming, USA  \n",
-       "674  Charlotte, North Carolina, USA  \n",
-       "675            Tulsa, Oklahoma, USA  \n",
-       "676  Charlotte, North Carolina, USA  \n",
-       "677           Denver, Colorado, USA  \n",
+       "                                  location  \n",
+       "0                      Miami, Florida, USA  \n",
+       "1                   Las Vegas, Nevada, USA  \n",
+       "2    Mexico City, Distrito Federal, Mexico  \n",
+       "3                 Anaheim, California, USA  \n",
+       "4                   Las Vegas, Nevada, USA  \n",
+       "..                                     ...  \n",
+       "676                   Casper, Wyoming, USA  \n",
+       "677         Charlotte, North Carolina, USA  \n",
+       "678                   Tulsa, Oklahoma, USA  \n",
+       "679         Charlotte, North Carolina, USA  \n",
+       "680                  Denver, Colorado, USA  \n",
        "\n",
-       "[678 rows x 4 columns]"
+       "[681 rows x 4 columns]"
       ]
      },
      "execution_count": 7,
@@ -353,6 +356,32 @@
    "source": [
     "fights_df = eventslist2df(fights_list)\n",
     "fights_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minio.api.Minio at 0x7fe5d863e640>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minio_client = initialize_minio_client(\n",
+    "\tipaddr=minio_container_ipaddr(),\n",
+    "\taccess_key=MINIO_ACCESS_KEY,\n",
+    "\tsecret_key=MINIO_SECRET_KEY,\n",
+    "\tport_number=9000\n",
+    ")\n",
+    "minio_client"
    ]
   },
   {
@@ -412,6 +441,30 @@
     "#     file_path=parsed_events_set_path,\n",
     "# )\n",
     "# os.remove(parsed_events_set_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minio_client = Minio(\n",
+    "    # endpoint=\"172.17.0.2:9000\",\n",
+    "    endpoint=f\"{minio_container_ipaddr()}:9000\",\n",
+    "    access_key=MINIO_ACCESS_KEY,\n",
+    "    secret_key=MINIO_SECRET_KEY,\n",
+    "    secure=False,\n",
+    ")\n",
+    "\n",
+    "minio_client.fget_object(\n",
+    "    bucket_name='ufc-raw-data',\n",
+    "    object_name='ufc_stats.json',\n",
+    "    file_path=PARSED_DATA_PATH,\n",
+    ")\n",
+    "\n",
+    "all_fights_list = json.load( open(PARSED_DATA_PATH, mode='r', encoding='utf-8'))\n",
+    "os.remove(PARSED_DATA_PATH)"
    ]
   },
   {
